<resources>
    <string name="app_name">Multi-Chess</string>
    <string name="usuario">User</string>
    <string name="contr">Password</string>
    <string name="iniciars">Login</string>
    <string name="register">Register</string>
    <string name="confPas">Confirm password</string>
    <string name="checkers">Checkers</string>
    <string name="chess">Chess</string>
    <string name="checkersOnline">Checkers online</string>
    <string name="chessOnline">Chess online</string>
    <string name="checkersLocal">Checkers locally</string>
    <string name="chessLocal">Chess locally</string>
    <string name="preferencies">Settings</string>
    <string name="idiomas">Languages</string>
    <string name="defIdm">In this section you can select the app language</string>
    <string name="idimSelect">App language</string>
    <string name="temSelect">App theme</string>
    <string name="lanques">Which language would you like to use?</string>
    <string name="temques">Which theme would you like to use?</string>
    <string name="temapp">In this section you can select the app theme</string>
    <string name="defi">Default</string>
    <string name="osc">Dark</string>
    <string name="logout">Logout</string>
    <string name="select">Select</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="codPais">Country Code: </string>
    <string name="porselectpais">Please select a country</string>
    <string name="bademail">Wrong email or password</string>
    <string name="todosCamp">Please complete all fields</string>
    <string name="otroemail">This email is in use, please try with other</string>
    <string name="contrnoval">Incorrect password. Your password must have a minimum of eight characters, at least one uppercase letter, one lowercase letter, one number and one special character.</string>
    <string name="correonovalido">invalid email</string>
    <string name="gameOverTitle">Game has ended</string>
    <string name="gameOver1">: elo added by </string>
    <string name="gameOver2">: elo reduced by </string>
    <string name="returnToMenu">Return to menu</string>
    <string name="new_game">New game</string>
    <string name="games_in_course">Games in course</string>
    <string name="record">Record</string>
    <string name="games">Games</string>
    <string name="my_turn">My turn</string>
    <string name="rivals_turn">Rival\'s turn</string>
    <string name="victory">Victory</string>
    <string name="loss">Loss</string>

</resources>